Archive2/e2/e7e5b45185f86b/output
main.cpp:10:34: error: static_assert expression is not an integral constant expression
    { static_assert(sizeof(T) <= a_.size(), "foo"); }
                    ~~~~~~~~~~~~~^~~~~~~~~
main.cpp:17:20: note: in instantiation of member function 'foo<long long>::foo' requested here
    foo<long long> f;
                   ^
1 error generated.
